tests/compile_failure/src/Core/NonCopyable.construct.fail.cpp
#include <Phi/Core/NonCopyable.hpp>

int main()
{
    phi::NonCopyable nc;
}
